--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,12 +20,12 @@
 				    <!-- Featured Post -->
 				    <article class="post featured">
 						    <header class="major">
-								    <span class="date">April 25, 2017</span>
-								    <h2><a href="#">And this is a<br />
-									      massive headline</a></h2>
-								    <p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									      facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									      amet nullam sed etiam veroeros.</p>
+								    <span class="date">March 12, 2025</span>
+								    <h2><a href="#">Alex M.<br />
+									      Fraley</a></h2>
+								    <p>**Roboticist | UAV Testing & AI Simulation | Research Engineer at NIST**<br />
+										Specializing in **UAV test methods, AI-driven perception, <br />
+										and real-world autonomy testing**.</p>
 						    </header>
 						    <a href="#" class="image main"><img src="assets/images/pic01.jpg" alt="" /></a>
 						    <ul class="actions">
