Updated main banner.

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,8 +1,10 @@
 <!-- Intro -->
 <div id="intro">
-		<h1>This is<br />
-				Massively</h1>
-		<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+		<h1>Alex M.<br />
+				Fraley</h1>
+				Specializing in **UAV test methods, AI-driven perception, <br />
+				and real-world autonomy testing.
+		<p>	Roboticist | UAV Testing & AI Simulation | Research Engineer at NIST <a href="https://www.nist.gov/people/alex-fraley">@ajlkn</a>.</p>
 		<ul class="actions">
 				<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 		</ul>
