Updated main banner and main overlay photo.

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -2,9 +2,9 @@
 <div id="intro">
 		<h1>Alex M.<br />
 				Fraley</h1>
-				Specializing in **UAV test methods, AI-driven perception, <br />
+				Specializing in UAV test methods, AI-driven perception, <br />
 				and real-world autonomy testing.
-		<p>	Roboticist | UAV Testing & AI Simulation | Research Engineer at NIST <a href="https://www.nist.gov/people/alex-fraley">@ajlkn</a>.</p>
+		<p>	Roboticist | UAV Testing & AI Simulation | Research Engineer at NIST <a href="https://www.nist.gov/people/alex-fraley"> </a>.</p>
 		<ul class="actions">
 				<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 		</ul>
