Updated text in descriptions and profile page.

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,10 +1,10 @@
 <!-- Intro -->
 <div id="intro">
-		<h1>Alex M.<br />
-				Fraley</h1>
-				Specializing in UAV test methods, AI-driven perception, <br />
-				and real-world autonomy testing.
-		<p>	Roboticist | UAV Testing & AI Simulation | Research Engineer at NIST <a href="https://www.nist.gov/people/alex-fraley"> </a>.</p>
+		<h1>Alex M.	Fraley</h1>
+				Specializing in aerospace engineering, with extensive experience in robot test method development, <br />
+				simulation, fabrication, validation, and deployment for both operator-driven and AI-driven UAVs, ground robots, and aquatic robots. <br />
+				Focus on real-world autonomy testing for federal agencies, regulatory bodies, international student-led competitions, and military applications.
+		<p>	Roboticist | Robot Testing & AI Simulation | Research Engineer at NIST <a href="https://www.nist.gov/people/alex-fraley"> </a>.</p>
 		<ul class="actions">
 				<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 		</ul>
