--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	   Massively by HTML5 UP
-	   html5up.net | @ajlkn
-	   Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-   -->
+
 <html>
 
     {% include head.html %}
@@ -20,12 +16,11 @@
 				    <!-- Featured Post -->
 				    <article class="post featured">
 						    <header class="major">
-								    <span class="date">March 12, 2025</span>
-								    <h2><a href="#">Alex M.<br />
-									      Fraley</a></h2>
-								    <p>**Roboticist | UAV Testing & AI Simulation | Research Engineer at NIST**<br />
+								    <span class="date">March 2025</span>
+								    <h2><a href="#">Alex M. Fraley</a></h2>
+								    <p> Roboticist | UAV Testing & AI Simulation | Research Engineer at NIST**<br />
 										Specializing in **UAV test methods, AI-driven perception, <br />
-										and real-world autonomy testing**.</p>
+										and real-world autonomy testing.</p>
 						    </header>
 						    <a href="#" class="image main"><img src="assets/images/pic01.jpg" alt="" /></a>
 						    <ul class="actions">
