--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,12 +17,12 @@
 				    <article class="post featured">
 						    <header class="major">
 								    <span class="date">March 2025</span>
-								    <h2><a href="#">Alex M. Fraley</a></h2>
-								    <p> Roboticist | UAV Testing & AI Simulation | Research Engineer at NIST**<br />
-										Specializing in **UAV test methods, AI-driven perception, <br />
+								    <h2><a href="#">Alex Fraley</a></h2>
+								    <p> Roboticist | UAV Testing & AI Simulation | Research Engineer at NIST<br />
+										Specializing in UAV test methods, AI-driven perception, <br />
 										and real-world autonomy testing.</p>
 						    </header>
-						    <a href="#" class="image main"><img src="assets/images/pic01.jpg" alt="" /></a>
+						    <a href="#" class="image main"><img src="assets/images/NIST-photos--016.jpg" alt="" /></a>
 						    <ul class="actions">
 								    <li><a href="#" class="button big">Full Story</a></li>
 						    </ul>
