Updated text in descriptions and profile page (3).

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,7 +1,7 @@
 <!-- Intro -->
 <div id="intro">
 		<h1>Alex M.	Fraley</h1>
-				Specializing in aerospace engineering, with extensive experience in robot test method development, <br />
+				Academic specialization in aerospace engineering, with extensive experience in robot test method development, <br />
 				simulation, fabrication, validation, and deployment for both operator-driven and AI-driven UAVs, ground robots, and aquatic robots. <br />
 				Focus on real-world autonomy testing for federal agencies, regulatory bodies, international student-led competitions, and military applications.
 		<p>	Roboticist | Robot Testing & AI Simulation | Research Engineer at NIST <a href="https://www.nist.gov/people/alex-fraley"> </a>.</p>
