Updated customizable sections.

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,6 +1,6 @@
 <!-- Intro -->
 <div id="intro">
-		<h1>Alex M.	Fraley</h1>
+		<h1>Alex Fraley</h1>
 				Academic specialization in aerospace engineering, with extensive experience in robot test method development, <br />
 				simulation, fabrication, validation, and deployment for both operator-driven and AI-driven UAVs, ground robots, and aquatic robots. <br />
 				Focus on real-world autonomy testing for federal agencies, regulatory bodies, international student-led competitions, and military applications.
