--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 		<!-- Header -->
 		<header id="header">
-				<a href="{{ site.url | relative_url }}" class="logo">Portfolios</a>
+				<a href="{{ site.url | relative_url }}" class="logo">Home</a>
 		</header>
