--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,11 +31,12 @@
             {% if site.posts != null %}
 
 				    <!-- Posts -->
+					<h2>Experience</h2>
 				    <section class="posts">
 	              {% for post in site.posts %}
 						    <article>
 								    <header>
-										    <span class="date">{{ post.date | date: "%B %-d, %Y" }}</span>
+										<span class="date">{{ post.date | date: "%B %Y" }}</span>
 										<h2><a href="{{ post.url  | relative_url }}">{{ post.title }}</a></h2>
 								</header>
 								<a href="{{ post.url  | relative_url }}" class="image fit"><img src="{{ post.image }}" alt="" /></a>
