--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,22 +16,24 @@
 				    <!-- Featured Post -->
 				    <article class="post featured">
 						    <header class="major">
-								    <span class="date">March 2025</span>
+								    <span class="date">Updated March 2025</span>
 								    <h2><a href="#">Alex Fraley</a></h2>
-								    <p> Roboticist | UAV Testing & AI Simulation | Research Engineer at NIST<br />
-										Specializing in UAV test methods, AI-driven perception, <br />
-										and real-world autonomy testing.</p>
+								    <p> Robot Test Engineer <br /> 
+										Programming, Automation and System Engineering <br /> 
+										UAV Test Development, Modeling, Simulation, Fabrication, Deployment and Validation <br />
+										AI-driven Perception, Object Recognition, <br />
+										and Real-World Autonomy Testing.</p>
 						    </header>
 						    <a href="#" class="image main"><img src="assets/images/NIST-photos--016.jpg" alt="" /></a>
 						    <ul class="actions">
-								    <li><a href="#" class="button big">Full Story</a></li>
+								    <li><a href="#" class="button big">Full Profile</a></li>
 						    </ul>
 				    </article>
 
             {% if site.posts != null %}
 
 				    <!-- Posts -->
-					<h2>Experience</h2>
+					<h2>Experiences</h2>
 				    <section class="posts">
 	              {% for post in site.posts %}
 						    <article>
