--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,11 +18,11 @@
 						    <header class="major">
 								    <span class="date">Updated March 2025</span>
 								    <h2><a href="#">Alex Fraley</a></h2>
-								    <p> Robot Test Engineer <br /> 
-										Programming, Automation and System Engineering <br /> 
-										UAV Test Development, Modeling, Simulation, Fabrication, Deployment and Validation <br />
+								    <p> Robot Test Engineer | <br /> 
+										Programming, Automation and System Engineering | <br /> 
+										UAV Test Development, Modeling, Simulation, Fabrication, Deployment and Validation | <br />
 										AI-driven Perception, Object Recognition, <br />
-										and Real-World Autonomy Testing.</p>
+										and Real-World Autonomy Testing. </p>
 						    </header>
 						    <a href="#" class="image main"><img src="assets/images/NIST-photos--016.jpg" alt="" /></a>
 						    <ul class="actions">
