fixed main.css sample pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1916,7 +1916,7 @@
 			line-height: 4rem;
 			border-radius: 4rem;
 			text-indent: 4rem;
-			overflow: visible !important;
+			overflow: hidden;
 			padding: 0;
 			white-space: nowrap;
 		}
