updated main page (intro.html) and news page

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,11 +1,11 @@
 <!-- Intro -->
 <div id="intro" class="fade-in">
 	<h1>Alex Fraley</h1>
-	Aerospace engineer and robotics researcher specializing in the development of standardized test methods for autonomous systems. <br />
-	Expertise in modeling, simulation, and experimental validation of AI-enabled UAVs, ground robots, and aquatic platforms. <br />
-	Focused on real-world autonomy evaluation for regulatory compliance, public safety, and research-driven innovation.
-	<p>Roboticist | Autonomy Test Methods | Research Engineer at NIST <a href="https://www.nist.gov/people/alex-fraley"> </a>.</p>
-	<p class="tagline">Bridging robotics, AI, and experimental science for reliable autonomy.</p>
+	Aerospace engineer and robotics researcher specializing in the development and standardization of test methods for autonomous systems (Aerial, Ground, Aquatic). <br />
+	Expertise in 3D-CAD modeling, drone simulations, and experimental validation of tests for AI-enabled UAVs, ground robots, and aquatic ROVs. <br />
+	Focused on real-world autonomy evaluation for public safety, regulatory compliance, and research-driven innovation.
+	<p>Emergency Response Robots | Standard Test Methods | Research Engineer at NIST <a href="https://www.nist.gov/people/alex-fraley"> </a>.</p>
+	<p class="tagline">Bridging academia, public safety. industry, and government bodies to advance reliable autonomy and operator proficiency of robotic platforms. </p>
 	<ul class="actions">
 		<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 	</ul>
