updated bg and main page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,13 +18,19 @@
 						    <header class="major">
 								    <span class="date">Updated March 2025</span>
 								    <h2><a href="#">Alex Fraley</a></h2>
-								    <p> | Robot Test Engineer |<br /> 
-										| Programming, Automation and System Engineering |<br /> 
-										| UAV Test Development, Modeling, Simulation, Fabrication, Deployment and Validation |<br />
-										| AI-driven Perception, Object Recognition, and Real-World Autonomy Testing. |</p>
+
+									Aerospace engineer and robotics researcher specializing in the development and standardization of test methods for autonomous systems (Aerial, Ground, Aquatic). <br />
+									Expertise in 3D-CAD modeling, drone simulations, and experimental validation of tests for AI-enabled UAVs, ground robots, and aquatic ROVs. <br />
+									Focused on real-world autonomy evaluation for public safety, regulatory compliance, and research-driven innovation.
+									<p>Emergency Response Robots | Standard Test Methods | Research Engineer at NIST <a href="https://www.nist.gov/people/alex-fraley"> </a>.</p>
+									<p class="tagline">Bridging academia, public safety. industry, and government bodies to advance reliable autonomy and operator proficiency of robotic platforms. </p>
+										
+								    <p> Programming, Automation and System Engineering |<br /> 
+										UAV Test Development, Modeling, Simulation, Fabrication, Deployment and Validation |<br />
+										AI-driven Perception, Object Recognition, and Real-World Autonomy Testing.</p>
 										
 						    </header>
-						    <a href="#" class="image main"><img src="assets/images/NIST-photos--016.jpg" alt="" /></a>
+						    <a href="#" class="image main"><img src="assets/images/hero.jpg" alt="" /></a>
 						    <ul class="actions">
 								    <li><a href="#" class="button big">Full Profile</a></li>
 						    </ul>
