updated bg and main page

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,7 +1,7 @@
 <!-- Intro -->
 <div id="intro" class="fade-in">
 	<h1>Alex Fraley</h1>
-	# Portfolio
+	<h2>Portfolio</h2>
 	<ul class="actions">
 		<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 	</ul>
